# presidio-fastapi

./: .env.example  .env.sample  DEPLOY-METRICS.md  README.md  cleanup-cache.ps1  debug_import.py  fix_middleware_types.py  grafana-dashboard.json  main.py  middleware_backup.txt  mypy.ini  pyproject.toml  test_debug.py  test_import.py
.github/prompts/: analyzecode.prompt.md  improvecode.prompt.md  project.prompt.md
.github/workflows/: ci.yml
app/: application.py  application.py.new  config.py  main.py  middleware.py  models.py  telemetry.py
app/api/: routes.py
app/models/: analyze_request.py  analyze_response.py  batch_analyze_request.py  batch_analyze_response.py
app/services/: analyzer.py
config/: recognizers.yaml
docs/: prometheus-metrics.md
presidio_fastapi/: __init__.py  run.py  stubs.py
presidio_fastapi/app/: __init__.py  config.py  main.py  middleware.py  middleware_clean.py  prometheus.py  telemetry.py  telemetry_clean.py  telemetry_fixed.py  telemetry_new.py  telemetry_old.py
presidio_fastapi/app/api/: routes.py
presidio_fastapi/app/models/: __init__.py  analyze_request.py  analyze_response.py  batch_analyze_request.py  batch_analyze_response.py  entity.py
presidio_fastapi/app/services/: __init__.py  analyzer.py  config_loader.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_config.py  test_main.py  test_middleware.py  test_prometheus.py  test_run.py
